tests/codegen/fail/scalar_value/multiple_unnamed_fields.rs
#[derive(juniper::ScalarValue)]
enum ScalarValue {
    Variant(u32, i64),
}

fn main() {}
